--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "JwtSettings": {
+    "Issuer": "http://localhost:3000"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "server=localhost;port=3307;database=clinic;user=root;password=passplease;"
   },
