--- a/ClientApp/clinic-reservation/package.json
+++ b/ClientApp/clinic-reservation/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@microsoft/signalr": "^7.0.12",
     "cookie-cutter": "^0.2.0",
     "next": "14.0.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "reactjs-popup": "^2.0.6"
   },
   "devDependencies": {
     "@types/node": "^20",
