--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "Issuer": "http://localhost:3000"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;port=3306;database=clinic;user=root;password=Yassoo_13;"
+    "DefaultConnection": "server=localhost;port=3307;database=clinic;user=root;password=passplease;"
   },
   "Logging": {
     "LogLevel": {
