--- a/api/dockerfile
+++ b/api/dockerfile
@@ -1,18 +1,16 @@
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 as base
-WORKDIR /app
-
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 COPY . /src
 WORKDIR /src
-RUN ls
-RUN dotnet build "clinic-reservation.csproj" -c Release -o /app/build
 RUN dotnet tool install --global dotnet-ef
 ENV PATH="$PATH:/root/.dotnet/tools"
+RUN dotnet build "clinic-reservation.csproj" -c Release -o /app/build
 
-FROM build AS publish
-RUN dotnet publish "clinic-reservation.csproj" -c Release -o /app/publish
+FROM build AS final
+WORKDIR /src
+COPY --from=build /app/build .
+EXPOSE 5243
+ENTRYPOINT [ "dotnet","ef database update","&&","dotnet","run" ]
 
-FROM base AS final
-WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "clinic-reservation.dll"]
+# docker pull mcr.microsoft.com/dotnet/sdk
+
+#"dotnet","ef database update","&&",
