--- a/api/dockerfile
+++ b/api/dockerfile
@@ -12,4 +12,4 @@ RUN dotnet publish "clinic-reservation.csproj" -c Release -o /app/publish
 WORKDIR /app
 COPY ./startup.sh .
 RUN chmod 777 ./startup.sh
-CMD [ "./startup.sh" ]
+CMD [ "sh","./startup.sh" ]
