--- a/client/clinic-reservation/package.json
+++ b/client/clinic-reservation/package.json
@@ -12,7 +12,7 @@
     "@microsoft/signalr": "^7.0.12",
     "amqplib": "^0.10.3",
     "js-cookie": "^3.0.5",
-    "next": "14.0.1",
+    "next": "latest",
     "react": "^18",
     "react-dom": "^18",
     "reactjs-popup": "^2.0.6"
