--- a/client/clinic-reservation/dockerfile
+++ b/client/clinic-reservation/dockerfile
@@ -24,7 +24,7 @@ COPY . .
 
 EXPOSE 3000
 
-ENV API="http://localhost:8000"
+ENV NEXT_PUBLIC_API="http://localhost:8000"
 
 # Define the command to start the app
 
