--- a/api/dockerfile
+++ b/api/dockerfile
@@ -2,6 +2,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 as base
 WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+RUN useradd -m userapi
 COPY . /src
 WORKDIR /src
 RUN ls
