--- a/api/dockerfile
+++ b/api/dockerfile
@@ -14,6 +14,6 @@ WORKDIR /app
 COPY ./startup.sh .
 RUN chmod 777 ./startup.sh
 EXPOSE 8080
-# ENV RABBITMQ="amqp://guest:guest@rabbit:5672"
+# ENV RABBITMQ="amqp://guest:guest@rabbitmq:5672"
 # ENV MYSQLDB="server=mysql;port=3306;database=clinic;user=root;password=Yassoo_13;"
 CMD [ "sh","./startup.sh" ]
