--- a/client/clinic-reservation/dockerfile
+++ b/client/clinic-reservation/dockerfile
@@ -5,11 +5,9 @@ FROM node:20-alpine
 RUN addgroup app && adduser -S -G app app
 RUN mkdir /app && chown app:app /app
 USER app
-
 WORKDIR /app
-COPY package*.json ./
+COPY --chown=app:app . .
 RUN npm install
-COPY . .
 
 # RUN addgroup --system --gid 1001 nodejs
 # RUN adduser --system --uid 1001 nextjs
@@ -19,6 +17,7 @@ COPY . .
 
 # ENV NEXT_PUBLIC_API="http://localhost:8000"
 
+USER app
 RUN npm run build
 EXPOSE 3000
 CMD ["npm", "run", "start"]
