--- a/client/clinic-reservation/dockerfile
+++ b/client/clinic-reservation/dockerfile
@@ -1,25 +1,97 @@
-# Use a Node.js base image
-FROM node:20-alpine
+# # Use a Node.js base image
+# FROM node:20-alpine
 
-# Set the working directory in the container
-RUN addgroup app && adduser -S -G app app
-RUN mkdir /app && chown app:app /app
-USER app
+# # Set the working directory in the container
+# RUN addgroup app && adduser -S -G app app
+# RUN mkdir /app && chown app:app /app
+# USER app
+# WORKDIR /app
+# COPY --chown=app:app . .
+# RUN npm install
+
+# # RUN addgroup --system --gid 1001 nodejs
+# # RUN adduser --system --uid 1001 nextjs
+
+# # RUN mkdir .next
+# # RUN chown nextjs:nodejs .next
+
+# # ENV NEXT_PUBLIC_API="http://localhost:8000"
+
+# USER app
+# RUN npm run build
+# RUN chmod -R 775 /app
+# EXPOSE 3000
+# USER 1000
+# CMD [ "npm", "run", "start" ]
+
+# adapted from https://github.com/vercel/next.js/tree/canary/examples/with-docker
+# needs next.config.js to set build to stand-alone with context as follows
+# /** @type {import('next').NextConfig} */
+# module.exports = {
+#  output: 'standalone',
+# }
+
+# Recommended to have .dockerignore file with the following content
+# Dockerfile
+# .dockerignore
+# node_modules
+# npm-debug.log
+# README.md
+# .next
+# .git
+
+# Install dependencies only when needed
+FROM registry.access.redhat.com/ubi8/nodejs-16 AS deps
+USER 0
 WORKDIR /app
-COPY --chown=app:app . .
-RUN npm install
 
-# RUN addgroup --system --gid 1001 nodejs
-# RUN adduser --system --uid 1001 nextjs
+# Install dependencies based on the preferred package manager
+COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
+RUN \
+  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
+  elif [ -f package-lock.json ]; then npm ci; \
+  elif [ -f pnpm-lock.yaml ]; then yarn global add pnpm && pnpm i; \
+  else echo "Lockfile not found." && exit 1; \
+  fi
 
-# RUN mkdir .next
-# RUN chown nextjs:nodejs .next
+# Rebuild the source code only when needed
+FROM registry.access.redhat.com/ubi8/nodejs-16 AS builder
+USER 0
+WORKDIR /app
+COPY --from=deps /app/node_modules ./node_modules
+COPY . .
 
-# ENV NEXT_PUBLIC_API="http://localhost:8000"
+# Next.js collects completely anonymous telemetry data about general usage.
+# Learn more here: https://nextjs.org/telemetry
+# Uncomment the following line in case you want to disable telemetry during the build.
+ENV NEXT_TELEMETRY_DISABLED 1
 
-USER app
+# If using yarn uncomment out and comment out npm below
+# RUN yarn build
+
+# If using npm comment out above and use below instead
 RUN npm run build
-RUN chmod -R 775 /app
+
+# Production image, copy all the files and run next
+FROM registry.access.redhat.com/ubi8/nodejs-16-minimal AS runner
+USER 0
+WORKDIR /app
+
+ENV NODE_ENV production
+# Uncomment the following line in case you want to enable telemetry during runtime.
+ENV NEXT_TELEMETRY_DISABLED 1
+
+COPY --from=builder /app/public ./public
+
+# Automatically leverage output traces to reduce image size
+# https://nextjs.org/docs/advanced-features/output-file-tracing
+COPY --from=builder --chown=1001:1001 /app/.next/standalone ./
+COPY --from=builder --chown=1001:1001 /app/.next/static ./.next/static
+
+USER 1001
+
 EXPOSE 3000
-USER 1000
-CMD [ "npm", "run", "start" ]
+
+ENV PORT 3000
+
+CMD ["node", "server.js"]
