Update Docker base images

--- a/client/clinic-reservation/dockerfile
+++ b/client/clinic-reservation/dockerfile
@@ -41,7 +41,7 @@
 # .git
 
 # Install dependencies only when needed
-FROM registry.access.redhat.com/ubi8/nodejs-16 AS deps
+FROM node:20 AS deps
 USER 0
 WORKDIR /app
 
@@ -55,7 +55,7 @@ RUN \
   fi
 
 # Rebuild the source code only when needed
-FROM registry.access.redhat.com/ubi8/nodejs-16 AS builder
+FROM node:20 AS builder
 USER 0
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
@@ -73,7 +73,7 @@ ENV NEXT_TELEMETRY_DISABLED 1
 RUN npm run build
 
 # Production image, copy all the files and run next
-FROM registry.access.redhat.com/ubi8/nodejs-16-minimal AS runner
+FROM node:20-alpine AS runner
 USER 0
 WORKDIR /app
 
