--- a/api/dockerfile
+++ b/api/dockerfile
@@ -14,6 +14,7 @@ WORKDIR /app
 COPY ./startup.sh .
 RUN chmod 777 ./startup.sh
 EXPOSE 8080
-# ENV RABBITMQ="amqp://guest:guest@rabbitmq:5672"
-# ENV MYSQLDB="server=mysql;port=3306;database=clinic;user=root;password=Yassoo_13;"
+# Comment if mq server and db server will not be run locally but use the same env variable names
+ENV RABBITMQ="amqp://guest:guest@rabbit:5672"
+ENV MYSQLDB="server=mysqldb;port=3306;database=clinic;user=root;password=Yassoo_13;"
 CMD [ "sh","./startup.sh" ]
